--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,37 @@
   --logo-second-part-color: #000000;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", "Raleway", sans-serif;
   color: var(--primary-text-color);
   font-size: 14px;
   font-weight: 400;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 /* PORTFOLIO PAGE */
 /* UI components */
@@ -33,6 +59,7 @@ body {
 }
 /* WebStudio-logo*/
 .logo {
+  margin-right: 93px;
   font-size: 26px;
   font-weight: 700;
   line-height: 1.17;
@@ -57,6 +84,8 @@ body {
   opacity: 60%;
 }
 .btn-studia {
+  margin-right: auto;
+  margin-left: auto;
   background-color: var(--design-color);
   color: var(--white-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -81,8 +110,64 @@ body {
   padding-left: 0;
   margin: 0;
 }
+
+/*Header*/
+.section {
+  max-width: 1600px;
+  min-width: 500px;
+  padding: 0 200px;
+}
+
+.container {
+  width: 1200px;
+  padding: 94px 15px;
+}
+header {
+  border-bottom: 1px solid #ececec;
+}
+
+.header-container {
+  width: 1200px;
+  padding: 32px 15px;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.list-header-menu {
+  display: flex;
+}
+.list-header-contacts {
+  display: flex;
+}
+
+.left-header-item {
+  margin-right: 50px;
+}
+
+.left-header-item:last-child {
+  margin-right: 344px;
+}
+
+.right-header-item {
+  margin-right: 50px;
+}
+
+.right-header-item:last-child {
+  margin-right: 0;
+}
 /*Hero Sections */
+.hero-container {
+  padding: 200px 15px;
+  width: 1200px;
+  display: flex;
+  flex-direction: column;
+}
+
 .hero-title {
+  margin: 0 0 30px;
   color: var(--white-color);
   text-transform: uppercase;
   text-align: center;
@@ -92,10 +177,18 @@ body {
 }
 
 .hero-bgc {
+  display: flex;
+  justify-content: center;
+  padding: 0 200px;
   background-color: var(--dark-bgc);
 }
 
 /* Hidden title 2-nd section */
+.list-benefits {
+  display: flex;
+  gap: 30px;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -107,39 +200,65 @@ body {
 }
 
 .post-title {
+  margin-bottom: 10px;
   line-height: 1.17;
   font-weight: 700;
 }
 
 .post-text {
+  margin-bottom: 0;
   color: var(--secondary-text-color);
   line-height: 1.7;
 }
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 /* Section 3 */
+.activity-container {
+  padding: 0 15px 94px;
+}
+.list-img {
+  display: flex;
+  gap: 30px;
+}
 .section-title {
+  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
 }
 /* Section 4 */
+.team-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.team-list {
+  display: flex;
+  gap: 30px;
+}
+
+.team-list-item {
+  flex-basis: calc((100% - 90px) / 4);
+}
+
+.team-title-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+}
+
 .team-titles {
+  margin-bottom: 10px;
   font-size: 16px;
   line-height: 1.17;
   font-weight: 500;
 }
-.team-list {
+.team-item {
   background-color: var(--white-color);
   max-width: 270px;
 }
 .team-text {
+  margin-bottom: 0;
   color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.17;
@@ -147,7 +266,20 @@ body {
 .team-bgc {
   background-color: var(--light-bgc);
 }
+/*Footer*/
+/*  */
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 60px 15px;
+}
 
+.list-footer {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+}
 .footer-bgc {
   background-color: var(--dark-bgc);
 }
@@ -193,10 +325,15 @@ body {
 .item {
   width: 370px;
   height: 404px;
+  border: 1px solid #eeeeee;
 }
+
 .list-item {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
   gap: 30px;
+}
+
+.list-item-text {
+  padding: 20px 24px;
 }
