--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,18 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.section {
+  max-width: 1600px;
+  padding: 94px 0;
+}
+
+.container {
+  width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
 /* PORTFOLIO PAGE */
 /* UI components */
 .link {
@@ -84,6 +96,7 @@ img {
   opacity: 60%;
 }
 .btn-studia {
+  display: block;
   margin-right: auto;
   margin-left: auto;
   background-color: var(--design-color);
@@ -112,24 +125,12 @@ img {
 }
 
 /*Header*/
-.section {
-  max-width: 1600px;
-  min-width: 500px;
-  padding: 0 200px;
-}
-
-.container {
-  width: 1200px;
-  padding: 94px 15px;
-}
 header {
+  width: 1600px;
+  padding: 32px 0;
   border-bottom: 1px solid #ececec;
 }
 
-.header-container {
-  width: 1200px;
-  padding: 32px 15px;
-}
 
 .header-nav {
   display: flex;
@@ -159,15 +160,9 @@ header {
   margin-right: 0;
 }
 /*Hero Sections */
-.hero-container {
-  padding: 200px 15px;
-  width: 1200px;
-  display: flex;
-  flex-direction: column;
-}
-
 .hero-title {
-  margin: 0 0 30px;
+  margin: 0 auto 30px;
+  min-width: 696px;
   color: var(--white-color);
   text-transform: uppercase;
   text-align: center;
@@ -177,10 +172,9 @@ header {
 }
 
 .hero-bgc {
-  display: flex;
-  justify-content: center;
-  padding: 0 200px;
-  background-color: var(--dark-bgc);
+max-width: 1600px;
+padding: 200px 0;
+background-color: var(--dark-bgc);
 }
 
 /* Hidden title 2-nd section */
@@ -212,10 +206,7 @@ header {
 }
 
 /* Section 3 */
-.activity-container {
-  padding: 0 15px 94px;
-}
-.list-img {
+.list-flex {
   display: flex;
   gap: 30px;
 }
@@ -226,16 +217,10 @@ header {
   text-align: center;
 }
 /* Section 4 */
-.team-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.team-list {
+.team-flex {
   display: flex;
   gap: 30px;
 }
-
 .team-list-item {
   flex-basis: calc((100% - 90px) / 4);
 }
@@ -268,11 +253,16 @@ header {
 }
 /*Footer*/
 /*  */
+.footer-bgc {
+  width: 1600px;
+  padding: 60px 0;
+  background-color: var(--dark-bgc);
+}
+
 .footer-container {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 60px 15px;
 }
 
 .list-footer {
@@ -280,9 +270,7 @@ header {
   flex-direction: column;
   gap: 9px;
 }
-.footer-bgc {
-  background-color: var(--dark-bgc);
-}
+
 .footer-address {
   font-style: normal;
 }
